--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
 		"lint": "next lint --fix"
 	},
 	"dependencies": {
-		"@radix-ui/themes": "^2.0.3",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-slot": "^1.0.2",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"lucide-react": "^0.315.0",
 		"next": "14.0.2",
+		"next-themes": "^0.2.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"tailwind-merge": "^2.2.1",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@types/node": "^20.10.0",
