--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -70,7 +70,7 @@
 			"error",
 			{ "allowNumber": true, "allowBoolean": true }
 		],
-		"typescript-eslint/no-unsafe-assignment": "off"
+		"@typescript-eslint/no-unsafe-argument": "off"
 	},
 	"overrides": [
 		{
