--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
 	},
 	"dependencies": {
 		"@clerk/nextjs": "^4.29.5",
+		"@hookform/resolvers": "^3.3.4",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
+		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@supabase/auth-helpers-nextjs": "^0.9.0",
 		"@supabase/auth-ui-react": "^0.4.7",
@@ -24,8 +26,10 @@
 		"next-themes": "^0.2.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.50.1",
 		"tailwind-merge": "^2.2.1",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@types/node": "^20.10.0",
