--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"editor.codeActionsOnSave": {
 		"source.fixAll": "explicit",
-		"source.organizeImports": true
+		"source.organizeImports": "explicit"
 	},
 	"files.associations": {
 		"*.css": "tailwindcss"
