--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
 		"@supabase/auth-ui-react": "^0.4.7",
 		"@supabase/ssr": "^0.1.0",
 		"@supabase/supabase-js": "^2.39.3",
+		"@types/ramda": "^0.29.10",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"lucide-react": "^0.315.0",
 		"next": "^14.1.0",
 		"next-themes": "^0.2.1",
+		"ramda": "^0.29.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.50.1",
