--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@supabase/ssr": "^0.1.0",
 		"@supabase/supabase-js": "^2.39.3",
 		"@types/ramda": "^0.29.10",
+		"@uploadthing/react": "^6.2.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"lucide-react": "^0.315.0",
@@ -32,6 +33,7 @@
 		"sonner": "^1.4.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
+		"uploadthing": "^6.3.3",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
