--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.50.1",
+		"react-use": "^17.5.0",
 		"sonner": "^1.4.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
@@ -38,7 +39,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "^20.10.0",
-		"@types/react": "^18.2.39",
+		"@types/react": "^18.2.55",
 		"@types/react-dom": "^18.2.17",
 		"@typescript-eslint/eslint-plugin": "^6.13.1",
 		"@typescript-eslint/parser": "^6.13.1",
