--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@clerk/nextjs": "^4.29.5",
 		"@hookform/resolvers": "^3.3.4",
+		"@nextui-org/react": "^2.2.9",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-label": "^2.0.2",
@@ -23,6 +24,7 @@
 		"@uploadthing/react": "^6.2.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
+		"framer-motion": "^11.0.5",
 		"lucide-react": "^0.315.0",
 		"next": "^14.1.0",
 		"next-themes": "^0.2.1",
