--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"react-hook-form": "^7.50.1",
 		"react-use": "^17.5.0",
 		"sonner": "^1.4.0",
+		"supabase": "^1.142.2",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
 		"uploadthing": "^6.3.3",
