--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@supabase/supabase-js": "^2.39.3",
 		"@types/ramda": "^0.29.10",
 		"@uploadthing/react": "^6.2.2",
+		"@vercel/analytics": "^1.1.4",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"framer-motion": "^11.0.5",
