--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
 		"@supabase/ssr": "^0.1.0",
 		"@supabase/supabase-js": "^2.39.3",
 		"@types/ramda": "^0.29.10",
-		"@uploadthing/react": "^6.2.2",
+		"@uploadthing/react": "^6.2.4",
 		"@vercel/analytics": "^1.1.4",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
+		"date-fns": "^3.3.1",
 		"framer-motion": "^11.0.5",
 		"lucide-react": "^0.315.0",
 		"next": "^14.1.0",
