--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -79,7 +79,8 @@
 			{ "allowNumber": true, "allowBoolean": true }
 		],
 		"@typescript-eslint/no-unsafe-argument": "off",
-		"@typescript-eslint/no-redundant-type-constituents": "off"
+		"@typescript-eslint/no-redundant-type-constituents": "off",
+		"@typescript-eslint/no-duplicate-type-constituents": "off"
 	},
 	"overrides": [
 		{
