--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"lucide-react": "^0.315.0",
 		"next": "^14.1.0",
 		"next-themes": "^0.2.1",
+		"postgres": "^3.4.3",
 		"ramda": "^0.29.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
