--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tabs": "^1.0.4",
 		"@supabase/auth-helpers-nextjs": "^0.9.0",
 		"@supabase/auth-ui-react": "^0.4.7",
 		"@supabase/ssr": "^0.1.0",
