--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"lint": "next lint --fix"
 	},
 	"dependencies": {
+		"@clerk/localizations": "^1.26.16",
 		"@clerk/nextjs": "^4.29.7",
+		"@clerk/themes": "^1.7.9",
 		"@hookform/resolvers": "^3.3.4",
 		"@nextui-org/react": "^2.2.9",
 		"@radix-ui/react-dialog": "^1.0.5",
