--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
 		"@clerk/nextjs": "^4.29.7",
 		"@clerk/themes": "^1.7.9",
 		"@hookform/resolvers": "^3.3.4",
+		"@mdx-js/loader": "^3.0.1",
+		"@mdx-js/react": "^3.0.1",
+		"@next/mdx": "^14.1.1",
 		"@nextui-org/react": "^2.2.9",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -23,6 +26,7 @@
 		"@supabase/auth-ui-react": "^0.4.7",
 		"@supabase/ssr": "^0.1.0",
 		"@supabase/supabase-js": "^2.39.3",
+		"@types/mdx": "^2.0.11",
 		"@types/ramda": "^0.29.10",
 		"@uploadthing/react": "^6.2.4",
 		"@vercel/analytics": "^1.1.4",
