--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@mdx-js/react": "^3.0.1",
 		"@next/mdx": "^14.1.1",
 		"@nextui-org/react": "^2.2.9",
+		"@nextui-org/use-infinite-scroll": "^2.1.2",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-label": "^2.0.2",
@@ -43,6 +44,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.50.1",
+		"react-stately": "^3.30.1",
 		"react-use": "^17.5.0",
 		"sonner": "^1.4.0",
 		"supabase": "^1.142.2",
