--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "local-market",
-	"version": "1.1.0",
+	"version": "1.1.0-beta",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
